@@ -31,4 +31,8 @@
   Convert a given OSM-XML object (as parsed by
   \code{\link[XML]{xmlParse}}) to an osmar object.
 }
+\examples{
+file <- system.file("extdata", "kaufstr.xml", package = "osmar")
+  kaufstr <- as_osmar(xmlParse(file))
+}
 
